--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
 <section class="projects">
     <h1> My Current Projects</h1>
     <div class="projects-container">
-        <embed id="monkey-boo" src="https://michaeluy001.github.io/Monkey-boo-v0.3/"></embed>
+        <embed id="monkey-boo" src="https://michaeluy001.github.io/monkey-boo-3/index.html"></embed>
         <p id="text-monkey-boo">
-            <a id="game" href="https://michaeluy001.github.io/Monkey-boo-v0.3/">Monkey-Boo! V3</a> is a jungle-themed 
+            <a id="game" href="https://michaeluy001.github.io/monkey-boo-3/index.html">Monkey-Boo! V3</a> is a jungle-themed 
             web-based game where players collect bananas while 
             avoiding Monkey-Boo! The game offers a simple yet engaging experience, 
             requiring players to randomly click on cells to score points. 
